--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
                <li class="nav-item"><a href="#" class="nav-link">road series</a></li>
                <li class="nav-item"><a href="#" class="nav-link">street series</a></li>
                <li class="nav-item"><a href="#" class="nav-link">mountain series</a></li>
+               <li class="nav-item"><a href="#" class="nav-link nav-link-300">Новости</a></li>
+               <li class="nav-item"><a href="#" class="nav-link nav-link-300">О нас</a></li>
+               <li class="nav-item"><a href="#" class="nav-link nav-link-300">Контакты</a></li>
+               <div class="d-flex">
+                  <li class="nav-item me-3"><a href="#" class="nav-link"><i class="fab fa-facebook-f"></i></a></li>
+                  <li class="nav-item"><a href="#" class="nav-link"><i class="fab fa-instagram"></i></a></li>
+               </div>
             </ul>
             <div class="d-flex align-items-center">
                <span class="navbar-cart"><i class="fas fa-shopping-cart"></i></span>
@@ -65,11 +72,23 @@
                               <img src="./src/img/category/bg3.png" alt="">
                            </div>
                         </div>
+                        <div class="owl-item">
+                           <div class="wrapper">
+                              <div class="wrapper-1"></div>
+                              <img src="./src/img/category/bg1.png" alt="">
+                           </div>
+                        </div>
+                        <div class="owl-item">
+                           <div class="wrapper wrapper-2">
+                              <img src="./src/img/category/bg2.png" alt="">
+                           </div>
+                        </div>
+                        <div class="owl-item">
+                           <div class="wrapper wrapper-3">
+                              <img src="./src/img/category/bg3.png" alt="">
+                           </div>
+                        </div>
                      </div>
-                  </div>
-                  <div class="category-nav">
-                     <div class="category-prev"><i class="fas fa-chevron-left"></i></div>
-                     <div class="category-next"><i class="fas fa-chevron-right"></i></div>
                   </div>
                </div>
             </div>
@@ -78,13 +97,13 @@
             <div class="container">
                <h2 class="title favorites__title">Избранные товары</h2>
                <div class="row">
-                  <div class="col-7 favorites-main">
+                  <div class="col-12 col-lg-7 favorites-main">
                      <div class="wrapper">
                         <div class="wrapper__title">Streetster Bakerstreet</div>
                         <div class="wrapper__descr">скорость соедененная с удобством</div>
                      </div>
                   </div>
-                  <div class="col-5 favorites-secondary">
+                  <div class="col-12 col-lg-5 favorites-secondary">
                      <div class="wrapper">Шлем Octane</div>
                      <div class="wrapper">Защита Canyon</div>
                      <div class="wrapper">Защита Canyon</div>
@@ -96,7 +115,7 @@
       </div>
       <section class="describe">
          <div class="container">
-            <p>
+            <p class="paragraph">
                <span>STREETSTER </span>
                – Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
@@ -194,43 +213,43 @@
    <footer class="footer">
       <div class="container">
          <div class="row">
-            <div class="col">
+            <div class="col-12 col-lg-2">
                <img class="footer__img" src="./src/img/footer/streetster.png" alt="">
             </div>
-            <div class="col">
-               <ul class="footer__ul">
-                  <li class="footer__li">Категории</li>
-                  <li class="footer__li">ROAD SERIES</li>
-                  <li class="footer__li">STREET SERIES</li>
-                  <li class="footer__li">MOUNTAIN SERIES</li>
+            <div class="col-6 col-lg-2">
+               <ul class="footer-nav">
+                  <li class="footer-item">Категории</li>
+                  <li class="footer-item">ROAD SERIES</li>
+                  <li class="footer-item">STREET SERIES</li>
+                  <li class="footer-item">MOUNTAIN SERIES</li>
                </ul>
             </div>
-            <div class="col">
-               <ul class="footer__ul">
-                  <li class="footer__li">Информация</li>
-                  <li class="footer__li">О нас</li>
-                  <li class="footer__li">Контакты</li>
+            <div class="col-6 col-lg-2">
+               <ul class="footer-nav">
+                  <li class="footer-item">Информация</li>
+                  <li class="footer-item">О нас</li>
+                  <li class="footer-item">Контакты</li>
                </ul>
             </div>
-            <div class="col">
-               <ul class="footer__ul">
-                  <li class="footer__li">Категории</li>
-                  <li class="footer__li">ROAD SERIES</li>
-                  <li class="footer__li">STREET SERIES</li>
-                  <li class="footer__li">MOUNTAIN SERIES</li>
+            <div class="col-6 col-lg-2">
+               <ul class="footer-nav">
+                  <li class="footer-item">Категории</li>
+                  <li class="footer-item">ROAD SERIES</li>
+                  <li class="footer-item">STREET SERIES</li>
+                  <li class="footer-item">MOUNTAIN SERIES</li>
                </ul>
             </div>
-            <div class="col">
-               <ul class="footer__ul">
-                  <li class="footer__li">Информация</li>
-                  <li class="footer__li">О нас</li>
-                  <li class="footer__li">Контакты</li>
+            <div class="col-6 col-lg-2">
+               <ul class="footer-nav">
+                  <li class="footer-item">Информация</li>
+                  <li class="footer-item">О нас</li>
+                  <li class="footer-item">Контакты</li>
                </ul>
             </div>
-            <div class="col">
-               <ul class="footer__ul d-flex">
-                  <li class="footer__li me-3"><i class="fab fa-facebook-f"></i></li>
-                  <li class="footer__li"><i class="fab fa-instagram"></i></li>
+            <div class="col-12 col-lg-2">
+               <ul class="footer-nav d-flex justify-content-center">
+                  <li class="footer-item me-3"><i class="fab fa-facebook-f"></i></li>
+                  <li class="footer-item"><i class="fab fa-instagram"></i></li>
                </ul>
             </div>
          </div>
