--- a/index.html
+++ b/index.html
@@ -253,7 +253,11 @@
                </ul>
             </div>
          </div>
-         <p class="footer__descr">© STREETSTER — Все права защищены </p>
+         <p class="copyright footer__descr">
+            <span>©</span>
+            <a href="https://amantaysv.github.io/" class="copyright-link" target="_blank">Amantay</a>
+            <span> — Все права защищены </span> 
+         </p>
       </div>
    </footer>
    <script src="./src/libs/jquery/js/jquery.min.js"></script>
