--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <header class="header">
       <div class="container">
          <nav class="navbar">
-            <img src="./src/img/home/nav-brand.svg" alt="" class="navbar-brand">
+            <img src="./src/img/header/nav-brand.svg" alt="" class="navbar-brand">
             <label class="navbar-search">
                <i class="fas fa-search navbar-search__icon"></i>
                <input class="navbar-search__input" type="text">
@@ -27,7 +27,7 @@
                <li class="nav-item"><a href="#" class="nav-link nav-link-300">О нас</a></li>
                <li class="nav-item"><a href="#" class="nav-link nav-link-300">Контакты</a></li>
                <div class="d-flex">
-                  <li class="nav-item me-3"><a href="#" class="nav-link"><i class="fab fa-facebook-f"></i></a></li>
+                  <li class="nav-item mr-20"><a href="#" class="nav-link"><i class="fab fa-facebook-f"></i></a></li>
                   <li class="nav-item"><a href="#" class="nav-link"><i class="fab fa-instagram"></i></a></li>
                </div>
             </ul>
@@ -59,33 +59,37 @@
                         <div class="owl-item">
                            <div class="wrapper">
                               <div class="wrapper-1"></div>
-                              <img src="./src/img/category/bg1.png" alt="">
+                              <img src="./src/img/category/bg1.png" alt="image">
                            </div>
                         </div>
                         <div class="owl-item">
-                           <div class="wrapper wrapper-2">
-                              <img src="./src/img/category/bg2.png" alt="">
+                           <div class="wrapper">
+                              <div class="wrapper-2"></div>
+                              <img src="./src/img/category/bg2.png" alt="image">
                            </div>
                         </div>
                         <div class="owl-item">
-                           <div class="wrapper wrapper-3">
-                              <img src="./src/img/category/bg3.png" alt="">
+                           <div class="wrapper">
+                              <div class="wrapper-3"></div>
+                              <img src="./src/img/category/bg3.png" alt="image">
                            </div>
                         </div>
                         <div class="owl-item">
                            <div class="wrapper">
                               <div class="wrapper-1"></div>
-                              <img src="./src/img/category/bg1.png" alt="">
+                              <img src="./src/img/category/bg1.png" alt="image">
                            </div>
                         </div>
                         <div class="owl-item">
-                           <div class="wrapper wrapper-2">
-                              <img src="./src/img/category/bg2.png" alt="">
+                           <div class="wrapper">
+                              <div class="wrapper-2"></div>
+                              <img src="./src/img/category/bg2.png" alt="image">
                            </div>
                         </div>
                         <div class="owl-item">
-                           <div class="wrapper wrapper-3">
-                              <img src="./src/img/category/bg3.png" alt="">
+                           <div class="wrapper">
+                              <div class="wrapper-3"></div>
+                              <img src="./src/img/category/bg3.png" alt="image">
                            </div>
                         </div>
                      </div>
@@ -133,21 +137,21 @@
             <div class="container">
                <h2 class="title about__title">Велосипеды Streetster это...</h2>
                <div class="row">
-                  <div class="col">
+                  <div class="col col-12 col-lg-4">
                      <div class="wrapper">
                         <h3 class="wrapper__text">Простота обсуживания</h3>
                         <p class="wrapper__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                            eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
                      </div>
                   </div>
-                  <div class="col">
+                  <div class="col col-12 col-lg-4">
                      <div class="wrapper">
                         <h3 class="wrapper__text">Надежная конструкция</h3>
                         <p class="wrapper__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                            eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
                      </div>
                   </div>
-                  <div class="col">
+                  <div class="col col-12 col-lg-4">
                      <div class="wrapper">
                         <h3 class="wrapper__text">Качественные детали</h3>
                         <p class="wrapper__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -176,7 +180,7 @@
                      </div>
                      <div class="owl-item">
                         <div class="wrapper">
-                           <img src="./src/img/news/kiev.jpg" alt="" class="wrapper__img">
+                           <img src="./src/img/news/kiev.jpg" alt="kiev" class="wrapper__img">
                            <h3 class="wrapper__text">Куда поехать <br> в Киеве?</h3>
                            <p class="wrapper__descr">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit,
                               sed do
@@ -186,7 +190,7 @@
                      </div>
                      <div class="owl-item">
                         <div class="wrapper">
-                           <img src="./src/img/news/kakobl.jpg" alt="" class="wrapper__img">
+                           <img src="./src/img/news/kakobl.jpg" alt="kakobl" class="wrapper__img">
                            <h3 class="wrapper__text">Как обслуживать свой <br> велосипед?</h3>
                            <p class="wrapper__descr">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit,
                               sed do
@@ -213,12 +217,12 @@
    <footer class="footer">
       <div class="container">
          <div class="row">
-            <div class="col-12 col-lg-2">
-               <img class="footer__img" src="./src/img/footer/streetster.png" alt="">
+            <div class="col-12 col-lg-3">
+               <img class="footer__img" src="./src/img/footer/logo.svg" alt="logo">
             </div>
             <div class="col-6 col-lg-2">
                <ul class="footer-nav">
-                  <li class="footer-item">Категории</li>
+                  <li class="footer-heading">Категории</li>
                   <li class="footer-item">ROAD SERIES</li>
                   <li class="footer-item">STREET SERIES</li>
                   <li class="footer-item">MOUNTAIN SERIES</li>
@@ -226,14 +230,14 @@
             </div>
             <div class="col-6 col-lg-2">
                <ul class="footer-nav">
-                  <li class="footer-item">Информация</li>
+                  <li class="footer-heading">Информация</li>
                   <li class="footer-item">О нас</li>
                   <li class="footer-item">Контакты</li>
                </ul>
             </div>
             <div class="col-6 col-lg-2">
                <ul class="footer-nav">
-                  <li class="footer-item">Категории</li>
+                  <li class="footer-heading">Категории</li>
                   <li class="footer-item">ROAD SERIES</li>
                   <li class="footer-item">STREET SERIES</li>
                   <li class="footer-item">MOUNTAIN SERIES</li>
@@ -241,22 +245,22 @@
             </div>
             <div class="col-6 col-lg-2">
                <ul class="footer-nav">
-                  <li class="footer-item">Информация</li>
+                  <li class="footer-heading">Информация</li>
                   <li class="footer-item">О нас</li>
                   <li class="footer-item">Контакты</li>
                </ul>
             </div>
-            <div class="col-12 col-lg-2">
+            <div class="col-12 col-lg-1">
                <ul class="footer-nav d-flex justify-content-center">
-                  <li class="footer-item me-3"><i class="fab fa-facebook-f"></i></li>
-                  <li class="footer-item"><i class="fab fa-instagram"></i></li>
+                  <li class="footer-item mr-20"><i class="fab fa-instagram"></i></li>
+                  <li class="footer-item"><i class="fab fa-facebook-f"></i></li>
                </ul>
             </div>
          </div>
          <p class="copyright footer__descr">
             <span>©</span>
             <a href="https://amantaysv.github.io/" class="copyright-link" target="_blank">Amantay</a>
-            <span> — Все права защищены </span> 
+            <span> — Все права защищены </span>
          </p>
       </div>
    </footer>
