--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <div class="container">
          <nav class="navbar">
             <img src="./src/img/header/nav-brand.svg" alt="" class="navbar-brand">
+            <img src="./src/img/logo.png" alt="" class="navbar-brand">
             <label class="navbar-search">
                <i class="fas fa-search navbar-search__icon"></i>
                <input class="navbar-search__input" type="text">
